--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
     <title>Minha Página</title>
     <script src="js/ex01.js"></script>
 </head>
-<body>
+<body onload="load()">
   <button type="button" onclick="clicou()">Clique aqui</button>
 
-  <p id="agradecimento"></p>
+  <p id="agradecimento" onclick="redirecionar()"></p>
 
+    <p  onmouseover="trocar(this)" onmouseout="voltar(this)">Passe o mouse aqui</p>
+
+    <p  onmouseover="trocar(this)" onmouseout="voltar(this)">Passe o mouse aqui</p>
+
+    <select onchange="funcaochange(this)" >
+      <option value="1">Valor 1</option>
+      <option value="2">Valor 2</option>
+      <option value="3">Valor 3</option>
+    </select>
 </body>
 </html>
